Fix: Use Paths.get() consistently instead of Path.of()
Co-authored-by: deathbit <40948107+deathbit@users.noreply.github.com>